CSS Advanced First Exercise Progress

--- a/01-Dev-Tools-And-Workflow/first-exercise/01-page.html
+++ b/01-Dev-Tools-And-Workflow/first-exercise/01-page.html
@@ -12,5 +12,9 @@ permalink: /page-one/
 <p>
   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, sed dicta reprehenderit distinctio voluptatibus
   repellat vitae cum voluptates iure, eligendi vel veritatis vero minus minima nobis impedit officiis debitis
-  consectetur.
+  consectetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, necessitatibus. Enim similique
+  praesentium provident modi, dolore rerum quibusdam laborum. Quasi sit corporis eaque nesciunt itaque aperiam quis ex.
+  Iusto, dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus qui amet, sit magnam officiis
+  provident perferendis tempora velit asperiores voluptatem dicta. Odio, dolorum eos voluptate vitae quos eius nihil
+  beatae?
 </p>
