--- a/01-Dev-Tools-And-Workflow/first-exercise/02-page.html
+++ b/01-Dev-Tools-And-Workflow/first-exercise/02-page.html
@@ -1,17 +1,25 @@
 ---
 
 layout: main
-title: Page two
+title: More About Kamen
 permalink: /page-two/
 
 ---
 
 
-
-<h1>Testing from the /page-two page</h1>
-
-<p>
-  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, sed dicta reprehenderit distinctio voluptatibus
-  repellat vitae cum voluptates iure, eligendi vel veritatis vero minus minima nobis impedit officiis debitis
-  consectetur.
-</p>
+<div class="ky-page-header">
+  <h2>Kamen's Personal Info</h2>
+</div>
+<div class="ky-page-main">
+  <div class="ky-main-text">
+      <p>Passionate about game development, web technologies. I have been studiyng Graphics Design with Adobe Photoshop and Illustrator
+          at New Bulgarian University. Currently mainly focusing on
+          studying JavaScript, HTML and CSS at SoftUni. In due time I will be looking for opportunities
+          in this area. I have spent a lot of time playing games, and am currentlly working as a QA Functionality Game Tester
+          at Sega. During the time when I am not playing games or studying I watch a lot of horror movies. Also a dog lover.
+        </p>
+  </div>
+  <div class="ky-main-image">
+    <img src="../images/kamen.jpg" alt="">
+  </div>
+</div>
