--- a/01-Dev-Tools-And-Workflow/first-exercise/about.html
+++ b/01-Dev-Tools-And-Workflow/first-exercise/about.html
@@ -1,13 +1,11 @@
 ---
 layout: main
-title: About page title
+title: About
 permalink: /about/
 ---
 
-<h1>Testing from the /about page</h1>
+<h1>More about these guys</h1>
 
 <p>
-  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, sed dicta reprehenderit distinctio voluptatibus
-  repellat vitae cum voluptates iure, eligendi vel veritatis vero minus minima nobis impedit officiis debitis
-  consectetur.
+  This little website was created by the both of us
 </p>
