--- a/01-Dev-Tools-And-Workflow/first-exercise/about.html
+++ b/01-Dev-Tools-And-Workflow/first-exercise/about.html
@@ -4,8 +4,21 @@ title: About
 permalink: /about/
 ---
 
-<h1>More about these guys</h1>
+<h2>More about these guys</h2>
+<div class="about-content">
 
-<p>
-  This little website was created by the both of us
-</p>
+    <div class="about-text">
+      <p>
+        Hi there, you have the chance to see our first colaborated project developed with the sole purpouse of applying
+        the
+        learned so far HTML and CSS instruments in the <b>SoftUni module Front-End</b> and most important to have some fun
+        together.
+      </p>
+      <p>We are Petar and Kamen and currely we are at the <b>CSS Advanced</b> course you can learn more about us by
+        checking
+        our individual pages from the navigation above.</p>
+    </div>
+    <div class="about-image">
+      <img src="../images/pesho-and-kamen.jpg" alt="Picture of Pesho and Kamen together">
+    </div>
+  </div>
